finish leture-page

--- a/app/lecture-page.html
+++ b/app/lecture-page.html
@@ -254,7 +254,7 @@
         </div>
     </section>
 
-    <section class="lecture-speaker course-benefits">
+    <section class="lecture-benefits course-benefits">
       <div class="container">
         <div class="course-benefits__inner">
           <div class="course-benefits__title-box">
@@ -311,6 +311,166 @@
         </div>
       </div>
     </div>
+
+    <div class="register  register-box">
+      <div class="container">
+        <div class="register__inner">         
+          <div class="register__form-box">
+            <div class="register__title-box">
+              <h6 class="register__suptitle">
+                Don’t miss the event
+              </h6>
+              <h2 class="register__title">
+                Leave a request
+              </h2>
+            </div>
+            <form class="discount__form register__form">
+              <label for="input-name">Full Name
+                <input class="discount__form-input" type="text" id="input-name" placeholder="Your full name" required>
+              </label>
+              <label for="input-email">Email
+                <input class="discount__form-input" type="text" id="input-email" placeholder="Your working email"
+                  required>
+              </label>
+              <label for="input-phone">Phone
+                <input class="discount__form-input" type="text" id="input-phone" placeholder="Your phone number" required>
+              </label>
+              <input class="btn" type="submit" value="Join the event">
+              <p> <sup>*</sup> You will receive a link to the online lecture in an email after registration.</p>
+            </form>            
+          </div>
+          <img class="register__image" src="images/content/register-image2.png" alt="registe image"
+          style="width: 550px; height: 502px;">
+        </div>
+      </div>
+    </div>
+
+    <section class="events-slider">
+      <div class="container-fluid container-grey">
+        <div class="container">
+          <div class="events-slider__inner">
+            <div class="events-slider__title-box">
+              <h6 class="events-slider__suptitle suptitle">
+                Check other online events
+              </h6>
+              <h2 class="events-slider__title title">
+                You may be interested in
+              </h2>
+            </div>
+            <div class="events-slider__box">
+              <div class=" events-page__content-item ">
+                <div class="events-item__day">05 Aug</div>
+                <div class="events-item__date">                  
+                  <p class="events-item__time">11:00 – 14:00</p>
+                </div>
+                <div class="events-item__info">
+                  <a class="events-item__link" href="#">
+                    Formation of the organizational structure of the company in the face of uncertainty.
+                  </a>
+                  <p class="events-item__descr">
+                    Online master-class
+                  </p>
+                </div>
+                <div class="events-item__btn">
+                  <a class="events__btn btn btn-white" href="#">View more</a>
+                </div>
+              </div>
+              <div class=" events-page__content-item ">
+                <div class="events-item__day">24 Jul</div>
+                <div class="events-item__date">                  
+                  <p class="events-item__time">11:00 – 12:30</p>
+                </div>
+                <div class="events-item__info">
+                  <a class="events-item__link" href="#">
+                    Building a customer service department. Best Practices.
+                  </a>
+                  <p class="events-item__descr">
+                    Online lecture
+                  </p>
+                </div>
+                <div class="events-item__btn">
+                  <a class="events__btn btn btn-white" href="#">View more</a>
+                </div>
+              </div>
+              <div class=" events-page__content-item ">
+                <div class="events-item__day">10 Jul</div>
+                <div class="events-item__date">             
+                  <p class="events-item__time">9:00 – 14:00</p>
+                </div>
+                <div class="events-item__info">
+                  <a class="events-item__link" href="#">
+                    Find and evaluate: search and assessment tools for candidates.
+                  </a>
+                  <p class="events-item__descr">
+                    Onine workshop
+                  </p>
+                </div>
+                <div class="events-item__btn">
+                  <a class="events__btn btn btn-white" href="#">View more</a>
+                </div>
+              </div>
+              <div class=" events-page__content-item ">
+                <div class="events-item__day">05 Aug</div>
+                <div class="events-item__date">                  
+                  <p class="events-item__time">11:00 – 14:00</p>
+                </div>
+                <div class="events-item__info">
+                  <a class="events-item__link" href="#">
+                    Formation of the organizational structure of the company in the face of uncertainty.
+                  </a>
+                  <p class="events-item__descr">
+                    Online master-class
+                  </p>
+                </div>
+                <div class="events-item__btn">
+                  <a class="events__btn btn btn-white" href="#">View more</a>
+                </div>
+              </div>
+              <div class=" events-page__content-item ">
+                <div class="events-item__day">24 Jul</div>
+                <div class="events-item__date">                  
+                  <p class="events-item__time">11:00 – 12:30</p>
+                </div>
+                <div class="events-item__info">
+                  <a class="events-item__link" href="#">
+                    Building a customer service department. Best Practices.
+                  </a>
+                  <p class="events-item__descr">
+                    Online lecture
+                  </p>
+                </div>
+                <div class="events-item__btn">
+                  <a class="events__btn btn btn-white" href="#">View more</a>
+                </div>
+              </div>
+              <div class=" events-page__content-item ">
+                <div class="events-item__day">10 Jul</div>
+                <div class="events-item__date">             
+                  <p class="events-item__time">9:00 – 14:00</p>
+                </div>
+                <div class="events-item__info">
+                  <a class="events-item__link" href="#">
+                    Find and evaluate: search and assessment tools for candidates.
+                  </a>
+                  <p class="events-item__descr">
+                    Onine workshop
+                  </p>
+                </div>
+                <div class="events-item__btn">
+                  <a class="events__btn btn btn-white" href="#">View more</a>
+                </div>
+              </div>
+          
+            </div>
+            <div class="events-slider__btn-box">
+              <span>Do you want more?</span>
+              <a class="btn events-slider__btn" href="#">Explore all events</a>
+            </div>          
+          </div>
+        </div>
+       
+      </div>
+    </section>
 
 
   </main>
