start aboutus-page + added section hero + section history

--- a/app/index.html
+++ b/app/index.html
@@ -70,10 +70,10 @@
         <div class="container">
           <div class="hero__inner">
             <div class="hero__box">
-              <a class="hero__video-link" href="#">
-                <div class="hero__video-box">
+              <a class="hero__video-link" data-fancybox href="https://www.youtube.com/watch?v=1gKZk0O2jPU">
+              <div class="hero__video-box">
                   <img class="hero__video-img" src="images/play-small.png" alt="play button"
-                    style="width: 52px; height: 52px;">
+                  style="width: 52px; height: 52px;">
                 </div>
                 Play showreel
               </a>
