added section core + section directions

--- a/app/aboutus-page.html
+++ b/app/aboutus-page.html
@@ -130,6 +130,149 @@
       </div>
     </section>
 
+    <section class="core">
+      <div class="container">
+        <div class="core__inner">
+          <div class="core__title-box">
+            <h6 class="core__suptitle suptitle">
+              We always stand for
+            </h6>
+            <h2 class="core__title title">
+              Our core values
+            </h2>
+          </div>
+          <div class="core__content-box">
+            <div class="core__item">
+              <img class="core__item-img" src="images/content/core-1.png" alt="core item image" style="width: 48px; height: 48px;" >
+              <div class="core__item-title title-sml">
+                Structured Approach
+              </div>
+              <p class="core__item-text">
+                Aenean urna dictum adipiscing nec, cras quisque. Nunc in mauris. 
+              </p>
+            </div>
+            <div class="core__item">
+              <img class="core__item-img" src="images/content/core-2.png" alt="core item image" style="width: 48px; height: 48px;">
+              <div class="core__item-title title-sml">
+                Professional Feedbacks
+              </div>
+              <p class="core__item-text">
+                Culpa nostrud commodo ea consequat reprehenderit aliquip. 
+              </p>
+            </div>
+            <div class="core__item">
+              <img class="core__item-img" src="images/content/core-3.png" alt="core item image" style="width: 48px; height: 48px;">
+              <div class="core__item-title title-sml">
+                Efficiency
+              </div>
+              <p class="core__item-text">
+                Viverra scelerisque consequat net. Adipisicing esse consequat. 
+              </p>
+            </div>
+            <div class="core__item">
+              <img class="core__item-img" src="images/content/core-4.png" alt="core item image" style="width: 48px; height: 48px;">
+              <div class="core__item-title title-sml">
+                Flexible Shedule
+              </div>
+              <p class="core__item-text">
+                Aute eiusmod dolore dolore deserunt veniam ad deserunt. 
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="direction">
+      <div class="container">
+        <div class="direction__inner">
+          <div class="direction__title-box">
+            <h6 class="direction__suptitle suptitle">
+              our main directions
+            </h6>
+            <h2 class="direction__title title">
+              What do we teach
+            </h2>
+          </div>
+          <div class="direction__content">
+            <div class="direction__content-item">
+              <img class="direction-item__image" src="images/content/direction-1.png" alt="direction image" style="width: 390px; height: 200px;">
+              <div class="direction-item__info">
+                <a  class="direction-item__spec courses__item-spec--green" href="#">
+                  Marketing
+                </a>
+                <p class="direction-item__text">
+                  Odio posuere netus quisque faucibus lectus arcu donec. Eget dictum eu viverra faucibus. Viverra scelerisque consequat.
+                </p>
+                <a class="direction-item__link" href="#">
+                  Check courses
+                </a>
+              </div>        
+            </div>
+            <div class="direction__content-item">
+              <img class="direction-item__image" src="images/content/direction-2.png" alt="direction image" style="width: 390px; height: 200px;">
+              <div class="direction-item__info">
+                <a  class="direction-item__spec courses__item-spec--blue" href="#">
+                  Management
+                </a>
+                <p class="direction-item__text">
+                  Odio posuere netus quisque faucibus lectus arcu donec. Eget dictum eu viverra faucibus. Viverra scelerisque consequat.
+                </p>
+                <a class="direction-item__link" href="#">
+                  Check courses
+                </a>
+              </div>          
+            </div>
+            <div class="direction__content-item">
+              <img class="direction-item__image" src="images/content/direction-3.png" alt="direction image" style="width: 390px; height: 200px;">
+              <div class="direction-item__info">
+                <a  class="direction-item__spec courses__item-spec--orange" href="#">
+                  HR & Recruting
+                </a>
+                <p class="direction-item__text">
+                  Odio posuere netus quisque faucibus lectus arcu donec. Eget dictum eu viverra faucibus. Viverra scelerisque consequat.
+                </p>
+                <a class="direction-item__link" href="#">
+                  Check courses
+                </a>
+              </div>          
+            </div>
+            <div class="direction__content-item">
+              <img class="direction-item__image" src="images/content/direction-4.png" alt="direction image" style="width: 390px; height: 200px;">
+              <div class="direction-item__info">
+                <a  class="direction-item__spec courses__item-spec--rose" href="#">
+                  Design
+                </a>
+                <p class="direction-item__text">
+                  Odio posuere netus quisque faucibus lectus arcu donec. Eget dictum eu viverra faucibus. Viverra scelerisque consequat.
+                </p>  
+                <a class="direction-item__link" href="#">
+                  Check courses
+                </a>
+              </div>         
+            </div>
+            <div class="direction__content-item">
+              <img class="direction-item__image" src="images/content/direction-5.png" alt="direction image" style="width: 390px; height: 200px;">
+              <div class="direction-item__info">
+                <a  class="direction-item__spec courses__item-spec--blue" href="#">
+                  Development
+                </a>
+                <p class="direction-item__text">
+                  Odio posuere netus quisque faucibus lectus arcu donec. Eget dictum eu viverra faucibus. Viverra scelerisque consequat.
+                </p>
+                <a class="direction-item__link" href="#">
+                  Check courses
+                </a>
+              </div>          
+            </div>
+            <div class="direction__content-item direction__content-item--last">
+            <p class="direction-item__cs" >New studying program coming soon...</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
   </main>
 
