--- a/app/courses.html
+++ b/app/courses.html
@@ -78,7 +78,7 @@
           </div>
           <div class="courses-list__content-box">
             <div class="courses-list__categories">
-              <button data-filter="all" type="button">
+              <button data-filter=".category-all" type="button">
                 All
                 <sup>17</sup>
               </button>
@@ -115,7 +115,7 @@
             </div>
 
             <div class="courses-list__content">
-              <div class="courses-list__content-item mix category-marketing" data-order="1">
+              <div class="courses-list__content-item mix category-marketing category-all" data-order="1">
                 <img class="courses__item-img" src="images/content/courses-list1.png" alt="cours one"
                   style="width: 390px; height: 240px;">
                 <div class="courses__item-box">
@@ -127,7 +127,7 @@
                   </div>
                 </div>
               </div>
-              <div class="courses-list__content-item mix category-management" data-order="2">
+              <div class="courses-list__content-item mix category-management category-all" data-order="2">
                 <img class="courses__item-img" src="images/content/courses-list2.png" alt="cours one"
                   style="width: 390px; height: 240px;">
                 <div class="courses__item-box">
@@ -139,7 +139,7 @@
                   </div>
                 </div>
               </div>
-              <div class="courses-list__content-item mix category-hr" data-order="3">
+              <div class="courses-list__content-item mix category-hr category-all" data-order="3">
                 <img class="courses__item-img" src="images/content/courses-list3.png" alt="cours one"
                   style="width: 390px; height: 240px;">
                 <div class="courses__item-box">
@@ -151,7 +151,7 @@
                   </div>
                 </div>
               </div>
-              <div class="courses-list__content-item mix category-marketing" data-order="4">
+              <div class="courses-list__content-item mix category-marketing category-all" data-order="4">
                 <img class="courses__item-img" src="images/content/courses-list4.png" alt="cours one"
                   style="width: 390px; height: 240px;">
                 <div class="courses__item-box">
@@ -163,7 +163,7 @@
                   </div>
                 </div>
               </div>
-              <div class="courses-list__content-item mix category-design" data-order="5">
+              <div class="courses-list__content-item mix category-design category-all" data-order="5">
                 <img class="courses__item-img" src="images/content/courses-list5.png" alt="cours one"
                   style="width: 390px; height: 240px;">
                 <div class="courses__item-box">
@@ -175,7 +175,7 @@
                   </div>
                 </div>
               </div>
-              <div class="courses-list__content-item mix category-management" data-order="6">
+              <div class="courses-list__content-item mix category-management category-all" data-order="6">
                 <img class="courses__item-img" src="images/content/courses-list6.png" alt="cours one"
                   style="width: 390px; height: 240px;">
                 <div class="courses__item-box">
@@ -187,7 +187,7 @@
                   </div>
                 </div>
               </div>
-              <div class="courses-list__content-item mix category-development" data-order="7">
+              <div class="courses-list__content-item mix category-development category-all" data-order="7">
                 <img class="courses__item-img" src="images/content/courses-list7.png" alt="cours one"
                   style="width: 390px; height: 240px;">
                 <div class="courses__item-box">
@@ -199,7 +199,7 @@
                   </div>
                 </div>
               </div>
-              <div class="courses-list__content-item mix category-hr" data-order="8">
+              <div class="courses-list__content-item mix category-hr category-all" data-order="8">
                 <img class="courses__item-img" src="images/content/courses-list8.png" alt="cours one"
                   style="width: 390px; height: 240px;">
                 <div class="courses__item-box">
@@ -211,7 +211,7 @@
                   </div>
                 </div>
               </div>
-              <div class="courses-list__content-item mix category-design" data-order="9">
+              <div class="courses-list__content-item mix category-design category-all" data-order="9">
                 <img class="courses__item-img" src="images/content/courses-list9.png" alt="cours one"
                   style="width: 390px; height: 240px;">
                 <div class="courses__item-box">
