added blog-single section

--- a/app/blog-single.html
+++ b/app/blog-single.html
@@ -68,20 +68,202 @@
     <section class="blog-single">
       <div class="container">
         <div class="blog-single__inner">
-          <div class="blog-single__items">
+          <div class="blog-single__posts">
+            <div class="blog-post">
+              <div class="blog-post__head">
+                <div class="blog-post__description-box">
+                  <a class="blog-post__description-name" href="#">
+                    <span>Article</span> 
+                    <svg width="12" height="15" viewBox="0 0 12 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M3.3335 8.50065C3.3335 8.13246 3.63197 7.83398 4.00016 7.83398H8.00016C8.36835 7.83398 8.66683 8.13246 8.66683 8.50065C8.66683 8.86884 8.36835 9.16732 8.00016 9.16732H4.00016C3.63197 9.16732 3.3335 8.86884 3.3335 8.50065Z" fill="#424551"/>
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M3.3335 11.0007C3.3335 10.6325 3.63197 10.334 4.00016 10.334H6.00016C6.36835 10.334 6.66683 10.6325 6.66683 11.0007C6.66683 11.3688 6.36835 11.6673 6.00016 11.6673H4.00016C3.63197 11.6673 3.3335 11.3688 3.3335 11.0007Z" fill="#424551"/>
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M4.02877 0.529247C4.1538 0.404222 4.32337 0.333984 4.50018 0.333984H9.00018C10.4729 0.333984 11.6668 1.52789 11.6668 3.00065L11.6668 12.0007C11.6668 13.4734 10.4729 14.6673 9.00018 14.6673H3.00016C1.5274 14.6673 0.333492 13.4734 0.333496 12.0006L0.333513 4.50065C0.333513 4.32384 0.403751 4.15427 0.528775 4.02925L4.02877 0.529247ZM4.33349 2.11015V4.33398H2.10965L4.33349 2.11015ZM1.66684 5.66732L1.66683 12.0006C1.66683 12.737 2.26378 13.334 3.00016 13.334H9.00018C9.73656 13.334 10.3335 12.737 10.3335 12.0007L10.3335 3.00065C10.3335 2.26427 9.73656 1.66732 9.00018 1.66732H5.66682V5.00065C5.66682 5.36884 5.36835 5.66732 5.00016 5.66732H1.66684Z" fill="#424551"/>
+                      </svg>
+                  </a>
+                  <a class="blog-post__description-theme" href="#">
+                    HR & Recruting
+                  </a>
+                </div>
+                <h2 class="blog-post__title title">
+                  HR statistics: job search, interviews, hiring and recruiting
+                </h2>
+                <div class="blog-post__details-box">
+                  <div class="blog-post__details">
+                    <div class="blog-post__date blog-post__details-item">
+                      August 3, 2020
+                    </div>
+                    <div class="blog-post__time-spend blog-post__details-item">
+                      4 min read
+                    </div>
+                  </div>
+                  <ul class="blog-post__share-list">
+                    <span class="blog-post__share">
+                      Share:
+                    </span>
+                    <li class="blog-post__share-item">
+                      <a class="blog-post__share-link" href="#">
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="10" height="18"  
+                          viewBox="0 0 16 28">
+                          <title>facebook</title>
+                          <path
+                            d="M14.984 0.187v4.125h-2.453c-1.922 0-2.281 0.922-2.281 2.25v2.953h4.578l-0.609 4.625h-3.969v11.859h-4.781v-11.859h-3.984v-4.625h3.984v-3.406c0-3.953 2.422-6.109 5.953-6.109 1.687 0 3.141 0.125 3.563 0.187z">
+                          </path>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="blog-post__share-item">
+                      <a class="blog-post__share-link" href="#">
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="18" height="15"
+                          viewBox="0 0 26 28">
+                          <title>twitter</title>
+                          <path
+                            d="M25.312 6.375c-0.688 1-1.547 1.891-2.531 2.609 0.016 0.219 0.016 0.438 0.016 0.656 0 6.672-5.078 14.359-14.359 14.359-2.859 0-5.516-0.828-7.75-2.266 0.406 0.047 0.797 0.063 1.219 0.063 2.359 0 4.531-0.797 6.266-2.156-2.219-0.047-4.078-1.5-4.719-3.5 0.313 0.047 0.625 0.078 0.953 0.078 0.453 0 0.906-0.063 1.328-0.172-2.312-0.469-4.047-2.5-4.047-4.953v-0.063c0.672 0.375 1.453 0.609 2.281 0.641-1.359-0.906-2.25-2.453-2.25-4.203 0-0.938 0.25-1.797 0.688-2.547 2.484 3.062 6.219 5.063 10.406 5.281-0.078-0.375-0.125-0.766-0.125-1.156 0-2.781 2.25-5.047 5.047-5.047 1.453 0 2.766 0.609 3.687 1.594 1.141-0.219 2.234-0.641 3.203-1.219-0.375 1.172-1.172 2.156-2.219 2.781 1.016-0.109 2-0.391 2.906-0.781z">
+                          </path>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="blog-post__share-item">
+                      <a class="blog-post__share-link" href="#">
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="17" height="17"
+                          viewBox="0 0 24 28">
+                          <title>linkedin</title>
+                          <path
+                            d="M5.453 9.766v15.484h-5.156v-15.484h5.156zM5.781 4.984c0.016 1.484-1.109 2.672-2.906 2.672v0h-0.031c-1.734 0-2.844-1.188-2.844-2.672 0-1.516 1.156-2.672 2.906-2.672 1.766 0 2.859 1.156 2.875 2.672zM24 16.375v8.875h-5.141v-8.281c0-2.078-0.75-3.5-2.609-3.5-1.422 0-2.266 0.953-2.641 1.875-0.125 0.344-0.172 0.797-0.172 1.266v8.641h-5.141c0.063-14.031 0-15.484 0-15.484h5.141v2.25h-0.031c0.672-1.062 1.891-2.609 4.672-2.609 3.391 0 5.922 2.219 5.922 6.969z">
+                          </path>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
 
+              <div class="blog-post__content">
+                <img class="blog-post__image" src="images/content/blog-post__image.png" alt="blog post image"
+                  style="width: 810px; height: 360px;">
+                <p class="blog-post__text--bold title-sml">
+                  Vulputate vitae pellentesque scelerisque luctus consequat mattis pellentesque dui odio. Interdum
+                  aenean sit malesuada ornare sed gravida rhoncus, congue. Purus auctor nullam diam quis est hendrerit
+                  ac euismod.
+                </p>
+                <p class="blog-single__post-text">
+                  At facilisi sapien posuere eget nunc senectus proin nullam. Tortor senectus in et sagittis, vitae diam
+                  cras dignissim. Varius adipiscing eget diam nisi. Orci, consectetur vulputate metus ornare pharetra,
+                  neque, fermentum. Vel nec rhoncus, non nunc, neque in massa. Feugiat leo nam nisl lacinia amet, odio.
+                  Mi varius viverra risus vel.
+                </p>
+                <p class="blog-single__post-text">
+                  Amet, morbi sed pharetra, elit eget mi potenti. Condimentum orci interdum feugiat lectus libero duis.
+                  Nisl massa, elementum varius sit. Nunc felis, porttitor aliquam urna, accumsan et sed. Aliquet non sed
+                  duis diam vehicula rhoncus. In dictum nullam tincidunt semper pellentesque purus morbi sed. Ut aliquet
+                  velit pharetra, nisi nunc, non.
+                </p>
+                <blockquote class="blog-post__blockquote title-sml">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo, amet lectus quam viverra mus lobortis
+                  fermentum amet, eu. Pulvinar eu sed purus facilisi. Vitae id turpis tempus ornare turpis quis non.
+                  Congue tortor in tot euismod vulputate etiam eros. Vel accumsan at elit neque, ipsum.
+                </blockquote>
+                <p class="blog-post__text">
+                  Mauris amet arcu nisl vel dictum tellus. Sed rhoncus, ut sed id ut erat mattis. Vitae mus blandit in
+                  neque amet non fringilla blandit:
+                </p>
+                <ul class="blog-post__list">
+                  <li class="blog-post__item">
+                    A fermentum in morbi pretium aliquam adipiscing donec tempus.
+                  </li>
+                  <li class="blog-post__item">
+                    Vulputate placerat amet pulvinar lorem nisl.
+                  </li>
+                  <li class="blog-post__item">
+                    Consequat feugiat habitant gravida quisque elit bibendum id adipiscing sed.
+                  </li>
+                  <li class="blog-post__item">
+                    Consequat feugiat habitant gravida quisque elit bibendum id adipiscing sed.
+                  </li>
+                </ul>
+                <p class="blog-post__text">
+                  Enim, vel massa odio diam. Blandit massa gravida feugiat elementum id nec sed leo. Nisi in ornare
+                  lectus eget. Urna, risus, consectetur volutpat lorem purus. Velit aliquet nibh vitae maecenas.
+                  Consectetur neque ut aliquam eros, purus enim dignissim aenean vitae. Ultrices fames augue mattis
+                  tortor est justo, pharetra nibh risus. Facilisi at porttitor volutpat natoque proin amet, nulla.
+                  Vivamus ut lobortis sagittis curabitur tellus convallis eget netus vitae.
+                </p>
+                <div class="blog-post__tags-box">
+                  <ul class="blog-post__tags-list">
+                    <span class="blog-post__tags-name">
+                      Tags:
+                    </span>
+                    <li class="blog-post__tags-item">
+                      <a class="blog-post__tags-link" href="#">
+                        #learning
+                      </a>
+                    </li>
+                    <li class="blog-post__tags-item">
+                      <a class="blog-post__tags-link" href="#">
+                        #HR
+                      </a>
+                    </li>
+                    <li class="blog-post__tags-item">
+                      <a class="blog-post__tags-link" href="#">
+                        #self-development
+                      </a>
+                    </li>
+                  </ul>
+                  <ul class="blog-post__share-list">
+                    <span class="blog-post__share">
+                      Share:
+                    </span>
+                    <li class="blog-post__share-item">
+                      <a class="blog-post__share-link" href="#">
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="10" height="18"  
+                          viewBox="0 0 16 28">
+                          <title>facebook</title>
+                          <path
+                            d="M14.984 0.187v4.125h-2.453c-1.922 0-2.281 0.922-2.281 2.25v2.953h4.578l-0.609 4.625h-3.969v11.859h-4.781v-11.859h-3.984v-4.625h3.984v-3.406c0-3.953 2.422-6.109 5.953-6.109 1.687 0 3.141 0.125 3.563 0.187z">
+                          </path>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="blog-post__share-item">
+                      <a class="blog-post__share-link" href="#">
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="18" height="15"
+                          viewBox="0 0 26 28">
+                          <title>twitter</title>
+                          <path
+                            d="M25.312 6.375c-0.688 1-1.547 1.891-2.531 2.609 0.016 0.219 0.016 0.438 0.016 0.656 0 6.672-5.078 14.359-14.359 14.359-2.859 0-5.516-0.828-7.75-2.266 0.406 0.047 0.797 0.063 1.219 0.063 2.359 0 4.531-0.797 6.266-2.156-2.219-0.047-4.078-1.5-4.719-3.5 0.313 0.047 0.625 0.078 0.953 0.078 0.453 0 0.906-0.063 1.328-0.172-2.312-0.469-4.047-2.5-4.047-4.953v-0.063c0.672 0.375 1.453 0.609 2.281 0.641-1.359-0.906-2.25-2.453-2.25-4.203 0-0.938 0.25-1.797 0.688-2.547 2.484 3.062 6.219 5.063 10.406 5.281-0.078-0.375-0.125-0.766-0.125-1.156 0-2.781 2.25-5.047 5.047-5.047 1.453 0 2.766 0.609 3.687 1.594 1.141-0.219 2.234-0.641 3.203-1.219-0.375 1.172-1.172 2.156-2.219 2.781 1.016-0.109 2-0.391 2.906-0.781z">
+                          </path>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="blog-post__share-item">
+                      <a class="blog-post__share-link" href="#">
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="17" height="17"
+                          viewBox="0 0 24 28">
+                          <title>linkedin</title>
+                          <path
+                            d="M5.453 9.766v15.484h-5.156v-15.484h5.156zM5.781 4.984c0.016 1.484-1.109 2.672-2.906 2.672v0h-0.031c-1.734 0-2.844-1.188-2.844-2.672 0-1.516 1.156-2.672 2.906-2.672 1.766 0 2.859 1.156 2.875 2.672zM24 16.375v8.875h-5.141v-8.281c0-2.078-0.75-3.5-2.609-3.5-1.422 0-2.266 0.953-2.641 1.875-0.125 0.344-0.172 0.797-0.172 1.266v8.641h-5.141c0.063-14.031 0-15.484 0-15.484h5.141v2.25h-0.031c0.672-1.062 1.891-2.609 4.672-2.609 3.391 0 5.922 2.219 5.922 6.969z">
+                          </path>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+
+
+
+            </div>
           </div>
           <aside class="blog-single__aside aside">
             <form class="aside__search-form">
               <input class="aside__search-input" type="search" placeholder="Search blog...">
               <button class="aside__search-btn" type="submit">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-search" width="16"
-                height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#9A9CA5" fill="none"
-                stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <circle cx="10" cy="10" r="7" />
-                <line x1="21" y1="21" x2="15" y2="15" />
-              </svg>
+                  height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#9A9CA5" fill="none" stroke-linecap="round"
+                  stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <circle cx="10" cy="10" r="7" />
+                  <line x1="21" y1="21" x2="15" y2="15" />
+                </svg>
               </button>
             </form>
 
@@ -145,7 +327,8 @@
                 Trending Articles
               </h4>
               <div class="aside__trends-item">
-                <img class="aside__trends-image" src="images/content/trend-art-1.jpg" alt="article" style="width: 100px; height: 100px;">
+                <img class="aside__trends-image" src="images/content/trend-art-1.jpg" alt="article"
+                  style="width: 100px; height: 100px;">
                 <div class="aside__trends-info">
                   <div class="aside__trends-date">
                     September 4, 2020
@@ -156,7 +339,8 @@
                 </div>
               </div>
               <div class="aside__trends-item">
-                <img class="aside__trends-image" src="images/content/trend-art-2.jpg" alt="article" style="width: 100px; height: 100px;">
+                <img class="aside__trends-image" src="images/content/trend-art-2.jpg" alt="article"
+                  style="width: 100px; height: 100px;">
                 <div class="aside__trends-info">
                   <div class="aside__trends-date">
                     July 15, 2020
@@ -167,7 +351,8 @@
                 </div>
               </div>
               <div class="aside__trends-item">
-                <img class="aside__trends-image" src="images/content/trend-art-3.jpg" alt="article" style="width: 100px; height: 100px;">
+                <img class="aside__trends-image" src="images/content/trend-art-3.jpg" alt="article"
+                  style="width: 100px; height: 100px;">
                 <div class="aside__trends-info">
                   <div class="aside__trends-date">
                     August 2, 2020
@@ -184,36 +369,36 @@
                 tags
               </h4>
               <ul class="aside__tags-list">
-               <li class="aside__tags-item">
-                <a class="aside__tags-link" href="#">
-                  #marketing
-                </a>
-               </li>
-               <li class="aside__tags-item">
-                <a class="aside__tags-link" href="#">
-                  #recruiting
-                </a>
-               </li>
-               <li class="aside__tags-item">
-                <a class="aside__tags-link" href="#">
-                  #coding
-                </a>
-               </li>
-               <li class="aside__tags-item">
-                <a class="aside__tags-link" href="#">
-                  #learning
-                </a>
-               </li>
-               <li class="aside__tags-item">
-                <a class="aside__tags-link" href="#">
-                  #HR
-                </a>
-               </li>
-               <li class="aside__tags-item">
-                <a class="aside__tags-link" href="#">
-                  #self-development
-                </a>
-               </li>
+                <li class="aside__tags-item">
+                  <a class="aside__tags-link" href="#">
+                    #marketing
+                  </a>
+                </li>
+                <li class="aside__tags-item">
+                  <a class="aside__tags-link" href="#">
+                    #recruiting
+                  </a>
+                </li>
+                <li class="aside__tags-item">
+                  <a class="aside__tags-link" href="#">
+                    #coding
+                  </a>
+                </li>
+                <li class="aside__tags-item">
+                  <a class="aside__tags-link" href="#">
+                    #learning
+                  </a>
+                </li>
+                <li class="aside__tags-item">
+                  <a class="aside__tags-link" href="#">
+                    #HR
+                  </a>
+                </li>
+                <li class="aside__tags-item">
+                  <a class="aside__tags-link" href="#">
+                    #self-development
+                  </a>
+                </li>
               </ul>
             </div>
           </aside>
